Bug 6420 - xclock code contains wrong "ifdef RENDER"
Summary: xclock code contains wrong "ifdef RENDER"
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-29 03:20 UTC by Kirill Belokurov
Modified: 2006-03-28 18:12 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
proposed patch to fix the bug (1.25 KB, patch)
2006-03-29 03:24 UTC, Kirill Belokurov
no flags Details | Splinter Review

Description Kirill Belokurov 2006-03-29 03:20:20 UTC
Following files contain incorrect "ifdef RENDER" in code:
app/xclock/Clock.c
app/xclock/XClock-color.ad

In the same time, the XRENDER definition is used for enabling the X render extension

The attached patch fixes the problem and also fixed the build error caused by
enabling of compilation of code that was previosly masked by "ifdef RENDER"
Comment 1 Kirill Belokurov 2006-03-29 03:24:59 UTC
Created attachment 5103 [details] [review]
proposed patch to fix the bug
Comment 2 Alan Coopersmith 2006-03-29 12:12:14 UTC
Thanks - fix applied to CVS:
CVSROOT:	/cvs/xorg
Module name:	app
Changes by:	alanc@kemper.freedesktop.org	06/03/29 02:10:49

Log message:
  2006-03-28  Alan Coopersmith  <alan.coopersmith@sun.com>
  
  	* Clock.c:
  	* XClock-color.ad:
  	Bug #6420 <https://bugs.freedesktop.org/show_bug.cgi?id=6420>
  	Patch #5103 <https://bugs.freedesktop.org/attachment.cgi?id=5103>
  	xclock code contains wrong "ifdef RENDER" (Kirill Belokurov)

Modified files:
      app/xclock/:
        ChangeLog Clock.c XClock-color.ad 
  
  Revision      Changes    Path
  1.8           +8 -0      app/xclock/ChangeLog
  http://cvs.freedesktop.org/xorg/app/xclock/ChangeLog
  1.6           +3 -3      app/xclock/Clock.c
  http://cvs.freedesktop.org/xorg/app/xclock/Clock.c
  1.3           +1 -2      app/xclock/XClock-color.ad
  http://cvs.freedesktop.org/xorg/app/xclock/XClock-color.ad


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.