Bug #6420 <https://bugs.freedesktop.org/show_bug.cgi?id=6420> Patch #5103     <https://bugs.freedesktop.org/attachment.cgi?id=5103> xclock code     contains wrong "ifdef RENDER" (Kirill Belokurov)